# moviman

./: .gitignore  DESIGN.md  README.md  app.py  pyproject.toml  requirements.txt  yt_auto_edit.py
static/: app.js  review.js  style.css
